--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: madebr/msvc152c
-          path: tools\msvc15
+          path: msvc152c
 
       - name: Install VFW SDK
         uses: actions/checkout@v4
