--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           python build.py
           call .\msvc152c\bin\msvcvars.bat x86
+          set LIB=%LIB%;%cd%\winsdk\win\3.1\msvfw\lib\
+          set INCLUDE=%LIB%;%cd%\winsdk\win\3.1\msvfw\include\
           cd build
           nmake -f makefile
 
