--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -12,9 +12,8 @@ jobs:
 
     - name: Run clang-format
       run: |
-        git config --global color.ui auto
         find src -iname '*.h' -o -iname '*.cpp' | xargs \
         pipx run "clang-format>=17,<18" \
           --style=file \
           -i
-        git diff --exit-code
+        git diff --color --exit-code
